[package]
name = "smush_material_db"
version = "0.1.0"
authors = ["ScanMountGoat <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssbh_lib = "0.12.0"
xmb_lib = { git = "https://github.com/ultimate-research/xmb_lib" }
globwalk = "0.8.0"
rusqlite = { version = "0.26.3", features = ["bundled"] }
rayon = "1.5.1"
sqlinsert_derive = { path = "sqlinsert_derive" }
clap = "2.33"