[package]
name = "sqlinsert_derive"
version = "0.1.0"
authors = ["SMG <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.4"
quote = "1.0.7"
Inflector = {version="*", default-features=false}